# easy-scraper

./: Cargo.toml  LICENSE  README.md  TODO.md
docs/: design.md
examples/: hatena_bookmark.rs  yahoo_news.rs  youtube_trending.rs
src/: lib.rs
